Fixing gh deployment 2

--- a/package.json
+++ b/package.json
@@ -36,5 +36,5 @@
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   },
-  "homepage": "https://taj-gillin.github.io/taj-gillin.github.io"
+  "homepage": "https://taj-gillin.github.io"
 }
