--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@tabler/icons-react": "^3.34.1",
     "@types/katex": "^0.16.7",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
@@ -28,11 +29,13 @@
     "next": "15.3.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
+    "plotly.js": "^3.3.0",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-katex": "^3.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-syntax-highlighter": "^15.6.6",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
