Convert website to minimal

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@tabler/icons-react": "^3.34.1",
     "@types/katex": "^0.16.7",
+    "@types/matter-js": "^0.20.2",
+    "@types/opentype.js": "^1.3.9",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,10 +29,14 @@
     "gray-matter": "^4.0.3",
     "katex": "^0.16.22",
     "lucide-react": "^0.511.0",
+    "matter-js": "^0.20.0",
     "next": "15.3.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
+    "opentype.js": "^1.3.4",
+    "pathseg": "^1.2.1",
     "plotly.js": "^3.3.0",
+    "poly-decomp": "^0.3.0",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
@@ -40,6 +46,7 @@
     "react-syntax-highlighter": "^15.6.6",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
